--- a/dmcadmin/templates/dmcadmin/base/sidebar.html
+++ b/dmcadmin/templates/dmcadmin/base/sidebar.html
@@ -8,7 +8,7 @@
             <a href="#" class="nav-link active">
               <i class="nav-icon fas fa-tachometer-alt"></i>
               <p>
-                Импорт данных
+                Manage command
                 <i class="right fas fa-angle-left"></i>
               </p>
             </a>
@@ -16,7 +16,7 @@
               <li class="nav-item">
                 <a href="../index.html" class="nav-link active">
                   <i class="far fa-circle nav-icon"></i>
-                  <p>Импорт phone iccid</p>
+                  <p>Run</p>
                 </a>
               </li>
 {#              <li class="nav-item">#}
